# vimium-todo

./: README.md
.github/workflows/: rust_ci.yml
client/: Cargo.toml  README.md
client/src/: auth.rs  console.rs  lib.rs  main.rs  menu.rs  parser.rs  task.rs  user.rs  utils.rs
client/tests/: auth_tests.rs  parser_tests.rs  task_tests.rs
server/: .env.example  README.md  docker-compose.yml  package.json
server/config/: plugins.ts
server/config/sync/: admin-role.strapi-super-admin.json  core-store.plugin_content_manager_configuration_content_types##api##task.task.json  user-role.authenticated.json
server/src/api/task/content-types/task/: schema.json
server/src/api/task/controllers/: task.ts
server/src/api/task/documentation/1.0.0/: task.json
server/src/api/task/middlewares/: add-user-to-task.ts
server/src/api/task/policies/: is-own-task.ts
server/src/api/task/routes/: task.ts
server/src/extensions/documentation/documentation/1.0.0/: full_documentation.json
server/src/extensions/documentation/public/: index.html
server/utils/: custom-router.ts
