cargo-features = ["edition2024"]

[package]
name = "vimium_todo_client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.1", features = ["full"] }
dotenv = "0.15"
mockito = "1.4.0"